# lxpanel-qt

./: AUTHORS  CMakeLists.txt  addapplet.ui  addappletdialog.cpp  addappletdialog.h  applet.cpp  applet.h  appletfactory.cpp  appletfactory.h  appletinfo.cpp  appletinfo.h  appletmanager.cpp  appletmanager.h  appletplugin.cpp  appletplugin.h  appletpluginfactory.cpp  appletpluginfactory.h  appletplugininfo.cpp  appletplugininfo.h  application.cpp  application.h  desktopsettings.cpp  lxpanel-qt.kdev4  main.cpp  org.lxde.LxPanel.Application.xml  panel.cpp  panel.h  popup.cpp  popup.h  preferences.ui  preferencesdialog.cpp  preferencesdialog.h  rundialog.cpp  rundialog.h  rundialog.ui  xfitman.cpp
.kdev4/: lxpanel-qt.kdev4
applets/appmenu/: appmenuapplet.cpp  appmenuapplet.h
applets/battery/: batteryapplet.cpp  batteryapplet.h  batterywidget.cpp  batterywidget.h
applets/blank/: blankapplet.cpp  blankapplet.h
applets/clock/: clockapplet.cpp  clockapplet.h
applets/launcher/: launchbutton.cpp  launchbutton.h  launcherapplet.cpp  launcherapplet.h
applets/netstatus/: netstatusapplet.cpp  netstatusapplet.h
applets/pager/: pagerapplet.cpp  pagerapplet.h
applets/showdesktop/: showdesktopapplet.cpp  showdesktopapplet.h
applets/systray/: README  razortray.cpp  razortray.h  systrayapplet.cpp  systrayapplet.h  trayicon.cpp  trayicon.h
applets/task/: elidingbutton.cpp  elidingbutton.h  taskapplet.cpp  taskapplet.h  taskbutton.cpp  taskbutton.h  taskinfo.cpp  taskinfo.h  taskmanager.cpp  taskmanager.h
applets/volume/: volumeapplet.cpp  volumeapplet.h  volumecontrol.cpp  volumecontrol.h  volumecontrolalsa.cpp  volumecontrolalsa.h
data/2panel/: config.xml
data/applets/: battery.desktop
data/default/: config.xml
debian/: changelog  control  rules
netwm/: README  kxutils.cpp  kxutils.h  netwm.cpp  netwm.h  netwm_def.h  netwm_p.h
